deploy/k8s/07-service-fts-alertmanager.yml
apiVersion: v1
kind: Service
metadata:
  name: fts-alertmanager
  namespace: monitoring
  labels:
    app: fts-alertmanager
    app.kubernetes.io/managed-by: fts
spec:
  type: ClusterIP
  selector:
    app: fts-alertmanager
  ports:
  - name: http
    port: 9093
    targetPort: 9093
    protocol: TCP
