deploy/k8s/08-ingress-fts-monitoring.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fts-monitoring
  namespace: monitoring
  labels:
    app.kubernetes.io/managed-by: fts
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: fts-monitoring.example.com
    http:
      paths:
      - path: /prometheus/(.*)
        pathType: Prefix
        backend:
          service:
            name: fts-prometheus
            port:
              number: 9090
      - path: /alertmanager/(.*)
        pathType: Prefix
        backend:
          service:
            name: fts-alertmanager
            port:
              number: 9093
